added logo, fix footer style

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -4,6 +4,9 @@
     "about_us": "О нас",
     "vacancies": "Вакансии",
     "contacts": "Контакты",
-    "services": "Услуги"
+    "services": "Услуги",
+    "last_vacancies": "Последние вакансии",
+    "contact_inform": "Контактная информация",
+    "sections": "Разделы"
   }
 }
