added map, layout contacts page, fix scss

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,7 +1,7 @@
 {
   "menu": {
     "main": "Главная",
-    "about_us": "О нас",
+    "who_we": "О нас",
     "vacancies": "Вакансии",
     "contacts": "Контакты",
     "services": "Услуги",
