--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -4,9 +4,18 @@
     "about_us": "О нас",
     "vacancies": "Вакансии",
     "contacts": "Контакты",
-    "services": "Услуги",
+    "services": "Услуги"    
+  },
+  "footer": {
     "last_vacancies": "Последние вакансии",
     "contact_inform": "Контактная информация",
     "sections": "Разделы"
+  },
+  "feedback": {
+    "first": "Очень рады, что судьба свела нас с агенством Алены и Алексвндра! Настоящие профессионалы. Все подробно растолковали, дали много дельных советов и подсказок, ответили на все интересующие вопросы Поддерживаем связь, даже находясь за границей. Ни на секунду не засомневались в Вас! Премного благодарны! Удачи Вам и хороших клиентов!",
+    "second": "Это моя вторая поездка в Польшу. Что хочу сказать? Очень дёшево, первый раз в два раза больше платил. Тут постоянно консультация, ответы на все мои вопросы, сказано-сделано, ну это приятно, в любое время суток звоню - Алёна на все вопросы отвечает, всё по максимуму вежливо и доступно. Классно что на Украине еще остались профессионалы своего дела. Огромное вам спасибо!!! Полное сопровождение от начала до конца! Эти люди просто знают и умеют делать то, что делают. Советую всем знакомым, кто заинтересовался, как я попал в Польшу)) очень доволен на самом деле, всё на высшем уровне, главное вежливо, дешево и с юмором))) i love interjobs",
+    "third": "Всем доброго времени суток! Хотелось бы сказать несколько хороших слов о данном агенстве. Ребята действительно профессионалы своего дела. У них все четко, слаженно, скурпулезны к деталям и индивидуально подходят к запрому/просьбе каждого клиента. Очень понравилось, что все ну очень подробно описывали, каждый шаг, каждое движение, поддерживали на протяжении всего периода. Поэтому, могу только поблагодарить и порекомендовать команду из Днепра"
   }
+
 }
+
