fix home-page translate text

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -10,6 +10,38 @@
     "last_vacancies": "Последние вакансии",
     "contact_inform": "Контактная информация",
     "sections": "Разделы"
+  },
+  "callback": {
+    "caption_callback": "Хотите личную консультацию или больше подробностей?",
+    "text": "Оставьте заявку на странице контактов и наш менеджер наберет вас в течении очень короткого промежутка времени"
+  },
+  "counter": {
+    "experience": "Года Опыта",
+    "action": "Активных",
+    "vacancy": "вакансии",
+    "expert": "Специалиста",
+    "received": "получивших",
+    "work": "работу"
+  },
+  "last_vacancy": {
+    "go_over": "Перейти"
+  },
+  "services": {
+    "caption_services": "Услуги",
+    "some_text": "Мы предоставляем широкий спектр услуг, которые помогут вам в вашем трудоустройстве в любой точке мира",
+    "all_services": "Услуги"
+  },
+  "who_we": {
+    "caption_whowe": "Кто мы",
+    "our_mission": "Наша Миссия",
+    "text_mission": "Помогать настоящим специалистам своего дела находить комфортное место для работы",
+    "our_goal": "Наша Цель",
+    "text_goal": "Сделать процесс трудоустройства специалистов простым и как для работника, так и для работодателя",
+    "our_values": "Наши ценности",
+    "text_values_1": "Открытость к общению и вопросам.",
+    "text_values_2": "Честность перед собой и другими.",
+    "text_values_3": "Ответственность за каждого специалиста.",
+    "text_values_4": " Развитие себя как компании, клиентов и рынка в целом."
   }
 }
 
