added translations , fix video

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,4 +1,13 @@
 {
+  "header_slider": {
+    "text_vacancy": "Только проверенные вакансии",
+    "main_text_vacancy": "Каждый день список вакансий пополняется новыми предложениями из разных стран для специалистов разных направлений",
+    "text_services": "Качественное предоставление услуг",
+    "main_text_services": "Кроме комплексного процесса трудоустройства, мы можем предоставить ряд отдельных услуг, которые могут быть полезными для вашего трудоустройства за границей",
+    "text_about_us": "Опытная команда",
+    "main_text_about_us": "Мы сертифицированная команда специалистов, которая всегда поможет вам в вопросах трудоустройства"
+    
+  },
   "menu": {
     "main": "Главная",
     "about_us": "О нас",
@@ -9,7 +18,8 @@
   "footer": {
     "last_vacancies": "Последние вакансии",
     "contact_inform": "Контактная информация",
-    "sections": "Разделы"
+    "sections": "Разделы",
+    "watch": "Посмотреть"
   },
   "callback": {
     "caption_callback": "Хотите личную консультацию или больше подробностей?",
@@ -29,7 +39,8 @@
   "services": {
     "caption_services": "Услуги",
     "some_text": "Мы предоставляем широкий спектр услуг, которые помогут вам в вашем трудоустройстве в любой точке мира",
-    "all_services": "Услуги"
+    "all_services": "Услуги",
+    "more": "Узнать подробнее"
   },
   "who_we": {
     "caption_whowe": "Кто мы",
@@ -42,6 +53,49 @@
     "text_values_2": "Честность перед собой и другими.",
     "text_values_3": "Ответственность за каждого специалиста.",
     "text_values_4": " Развитие себя как компании, клиентов и рынка в целом."
+  },
+  "vacancies": {
+    "age": "Возраст",
+    "use": "Применить",
+    "applied": "Применено",
+    "country": "Страна",
+    "select_country": "Выберите страну...",
+    "specialities": "Специальность",
+    "select_specialities": "Выберите страну...",
+    "experience": "Опыт Работы",
+    "no_more": "не более",
+    "years": "лет",
+    "salary": "Заработная плата",
+    "Any": "Любой",
+    "Male": "Мужчина",
+    "Female": "Женшина",
+    "Family": "Семья",
+    "sex": "Пол",
+    "found": "Найдено:",
+    "vacancies": "вакансий",
+    "valuta_uah": "грн",
+    "mean_salary": "средняя заработная плата",
+    "find": "Найти",
+    "vacancy": "Вакансия"
+  },
+  "vacancy_form": {
+    "name": "Имя:",
+    "phone": "Телефон:",
+    "email": "Email address",
+    "information": "Дополнительная информация:",
+    "send": "Отправить"
+  },
+  "vacancy_modal": {
+    "response_to": "Отклик на -"
+  },
+  "vacancy": {
+    "full_description": "Полное описание",
+    "arrival_date:": "Дата заезда:",
+    "added_by:": "Добавлено:",
+    "valuta_uah": "грн",
+    "years": "лет",
+    "suggest_friend": "Предложить другу",
+    "respond": "Откликнуться"
   }
 }
 
