fixes of translations and scss

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -40,7 +40,7 @@
     "caption_services": "Услуги",
     "some_text": "Мы предоставляем широкий спектр услуг, которые помогут вам в вашем трудоустройстве в любой точке мира",
     "all_services": "Услуги",
-    "more": "Узнать подробнее"
+    "more": "Подробнее"
   },
   "who_we": {
     "caption_whowe": "Кто мы",
