--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -61,7 +61,7 @@
     "country": "Страна",
     "select_country": "Выберите страну...",
     "specialities": "Специальность",
-    "select_specialities": "Выберите страну...",
+    "select_specialities": "Выберите специа...",
     "experience": "Опыт Работы",
     "no_more": "не более",
     "years": "лет",
