--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -68,7 +68,7 @@
     "salary": "Заработная плата",
     "Any": "Любой",
     "Male": "Мужчина",
-    "Female": "Женшина",
+    "Female": "Женщина",
     "Family": "Семья",
     "sex": "Пол",
     "found": "Найдено:",
@@ -81,7 +81,7 @@
   "vacancy_form": {
     "name": "Имя:",
     "phone": "Телефон:",
-    "email": "Email address",
+    "email": "Email",
     "information": "Дополнительная информация:",
     "send": "Отправить"
   },
@@ -96,6 +96,10 @@
     "years": "лет",
     "suggest_friend": "Предложить другу",
     "respond": "Откликнуться"
+  },
+  "page_404": {
+    "some_text": "Упс! Этой страницы не существует!",
+    "main": "На главную"
   }
 }
 
