--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -89,13 +89,18 @@
     "response_to": "Отклик на -"
   },
   "vacancy": {
+    "salary": "Заработная плата:",
+    "country": "Страна:",
+    "sex": "Пол:",
+    "age": "Возраст:",
     "full_description": "Полное описание",
     "arrival_date:": "Дата заезда:",
     "added_by:": "Добавлено:",
     "valuta_uah": "грн",
     "years": "лет",
     "suggest_friend": "Предложить другу",
-    "respond": "Откликнуться"
+    "respond": "Откликнуться",
+    "icon_uah": "₴"
   },
   "page_404": {
     "some_text": "Упс! Этой страницы не существует!",
