hotfix translate-ru added link and call

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -6,14 +6,14 @@
     "main_text_services": "Кроме комплексного процесса трудоустройства, мы можем предоставить ряд отдельных услуг, которые могут быть полезными для вашего трудоустройства за границей",
     "text_about_us": "Опытная команда",
     "main_text_about_us": "Мы сертифицированная команда специалистов, которая всегда поможет вам в вопросах трудоустройства"
-    
+
   },
   "menu": {
     "main": "Главная",
     "about_us": "О нас",
     "vacancies": "Вакансии",
     "contacts": "Контакты",
-    "services": "Услуги"    
+    "services": "Услуги"
   },
   "footer": {
     "last_vacancies": "Последние вакансии",
@@ -81,8 +81,19 @@
   "vacancy_form": {
     "name": "Имя:",
     "phone": "Телефон:",
-    "email": "Email",
+    "email": "Email:",
     "information": "Дополнительная информация:",
+    "send": "Отправить"
+  },
+  "contacts_titles": {
+    "contacts_info": "Контакты",
+    "message_from_user": "Форма обратной связи"
+  },
+  "contacts_form": {
+    "name": "Имя",
+    "phone": "Номер телефона",
+    "email": "Email",
+    "information": "Дополнительная информация",
     "send": "Отправить"
   },
   "vacancy_modal": {
@@ -113,4 +124,3 @@
     "main": "На главную"
   }
 }
-
