--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -118,7 +118,7 @@
     "added_by:": "Добавлено: ",
     "valuta_uah": "грн",
     "years": "лет",
-    "suggest_friend": "Предложить другу",
+    "share": "Поделиться!",
     "respond": "Откликнуться",
     "icon_uah": "₴",
     "requirments": "Требования:",
