add page about us

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -36,6 +36,14 @@
   "last_vacancy": {
     "go_over": "Перейти"
   },
+  "about_us":{
+    "who_are_we": "Мы - команда профессионалов, на которых вы можете полностью полагаться при сотрудничестве с нами.",
+    "pluses_title":"Поиск работы с нашей компанией – это всегда быстро, надежно и удобно. Выбрав нашу компанию, вы гарантировано получите такие «плюсы», как:",
+    "plus_checked_vacancy":"проверенные и безопасные вакансии",
+    "plus_real_propose":"гарантированно реальные предложения",
+    "plus_real_employers":"реально существующих работодателей",
+    "plus_eco_time_money":"экономию вашего времени и денег"
+  },
   "services": {
     "caption_services": "Услуги",
     "some_text": "Мы предоставляем широкий спектр услуг, которые помогут вам в вашем трудоустройстве в любой точке мира",
