add share buttons in vacancy, fix styles

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -36,8 +36,9 @@
   "last_vacancy": {
     "go_over": "Перейти"
   },
-  "about_us":{
+  "about_us": {
     "who_are_we": "Мы - команда профессионалов, на которых вы можете полностью полагаться при сотрудничестве с нами.",
+    "about_company": "О компании",
     "pluses_title":"Поиск работы с нашей компанией – это всегда быстро, надежно и удобно. Выбрав нашу компанию, вы гарантировано получите такие «плюсы», как:",
     "plus_checked_vacancy":"проверенные и безопасные вакансии",
     "plus_real_propose":"гарантированно реальные предложения",
@@ -126,7 +127,7 @@
     "added_by:": "Добавлено: ",
     "valuta_uah": "грн",
     "years": "лет",
-    "share": "Поделиться!",
+    "share": "Поделиться:",
     "respond": "Откликнуться",
     "icon_uah": "₴",
     "requirments": "Требования:",
