--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -8,6 +8,15 @@
     "main_text_about_us": "Мы сертифицированная команда специалистов, которая всегда поможет вам в вопросах трудоустройства"
 
   },
+  "seo": {
+    "title": {
+      "main": "Главная",
+      "about_us": "О нас",
+      "vacancies": "Вакансии",
+      "contacts": "Контакты",
+      "services": "Услуги"
+    }
+  },
   "menu": {
     "main": "Главная",
     "about_us": "О нас",
