updated info in who_we

--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -62,15 +62,28 @@
   },
   "who_we": {
     "caption_whowe": "Кто мы",
+    "our_headline": "Лицензированное агентство \"Worker\" оказывает помощь только в легальном трудоустройстве за рубежом.",
+    "packege_profi": "\"Профи\"",
+    "packege_biometric_passport": "\"Трудоустройство в Польше по биометрическому паспорту\"",
+    "packege_standart": "\"Стандарт\"",
+    "more": " Подробности по ссылке:",
     "our_mission": "Наша Миссия",
-    "text_mission": "Помогать настоящим специалистам своего дела находить комфортное место для работы",
+    "mission_value": "Скрупулезный подход к каждому желающему выехать на работу - залог успеха нашего с Вами сотрудничества!",
     "our_goal": "Наша Цель",
-    "text_goal": "Сделать процесс трудоустройства специалистов простым и как для работника, так и для работодателя",
-    "our_values": "Наши ценности",
-    "text_values_1": "Открытость к общению и вопросам.",
-    "text_values_2": "Честность перед собой и другими.",
-    "text_values_3": "Ответственность за каждого специалиста.",
-    "text_values_4": " Развитие себя как компании, клиентов и рынка в целом."
+    "goal_values": "Сделать процесс трудоустройства специалистов простым как для работника, так и для работодателя",
+    "our_benefits": "Преимущества нашего агентства",
+    "benefits_values_1": "Индивидуальный подход к каждому клиенту",
+    "benefits_values_2": "Полное сопровождение и консультации всех этапов оформления и трудоустройства",
+    "benefits_values_3": "Большой выбор вакансий от надежных и проверенных работодателей",
+    "benefits_values_4": "Особые условия по специалистам узкого профиля",
+    "we_provide": "Мы обеспечиваем работу",
+    "provide_values_1": "Каждый день выезжает большое количество специалистов строительной, аграрной, гостиничной, ресторанной и других сфер на достойные условия по оплате и проживанию. Если у Вас есть многолетний опыт работы в определённой сфере, профильное образование и желание работать и зарабатывать в Европе, тогда Вам точно нужно именно к нам.",
+    "provide_values_2": "Менеджеры агентства подготовят, переведут и оформят CV для работодателя с наилучшими предложения на рынке труда, по Вашей специфике, и всё это на особых условиях для Вас.",
+    "we_offer": "Мы предлагаем",
+    "offer_value": "Заработная плата по специалистам стартует от 1000 $ и выше, в зависимости от опыта, навыков и умений соискателя.",
+    "offer_package_value_1": "Мы сможем предложить Вам пакет \"Профи\" по оформлению пакета документов и трудоустройству по специальной цене!",
+    "offer_package_value_2": "Для кандидатов без квалификаций предлагаем только лучшие вакансии на рынке труда в Польше. Желающим выехать в рамках безвизового режима (до 90 дней) с условиями трудоустройства можно ознакомиться по ссылке:",
+    "offer_package_value_3": "Тем, кто намерен оформить национальную рабочую визу (до 180 дней)."
   },
   "vacancies": {
     "age": "Возраст",
