--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -55,9 +55,9 @@
     "plus_eco_time_money":"экономию вашего времени и денег"
   },
   "services": {
-    "caption_services": "Услуги",
+    "caption_services": "Все услуги",
     "some_text": "Мы предоставляем широкий спектр услуг, которые помогут вам в вашем трудоустройстве в любой точке мира",
-    "all_services": "Услуги",
+    "all_services": "Все услуги",
     "more": "Подробнее"
   },
   "who_we": {
